--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -18,9 +18,9 @@ on:
     branches:
       - main
     paths:
-      - '.config'
-#  schedule:
-#    - cron: 0 8 * * 5
+      - 'x64.config'
+  schedule:
+    - cron: 0 18 * * *
 #  watch:
 #    types: started
 
@@ -28,7 +28,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
+  CONFIG_FILE: x64.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: false
