--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -19,8 +19,8 @@ on:
       - main
     paths:
       - 'x64.config'
-  schedule:
-    - cron: 0 18 * * *
+  #schedule:
+    #- cron: 0 18 * * *
 #  watch:
 #    types: started
 
